tests/integration/tests/check_commands/CHECK/failure/10-scanning-from-here-location/CHECK.itest
; RUN: echo -e "String1" | (%FILECHECK_EXEC %S/CHECK.check 2>&1; test $? = 1;) | %FILECHECK_EXEC %s
; CHECK: {{^.*}}FileCheck{{(\.py)?$}}
; CHECK: {{.*}}CHECK.check:2:8: error: CHECK: expected string not found in input
; CHECK: CHECK: String2
; CHECK:        ^
; TODO
; CHECK <stdin>:1:8: note: scanning from here
; CHECK String1
; CHECK:        ^
; CHECK-EMPTY:
